Correction après soutenance des codes de retour erreur de l'API _ AJout erreur 500 _ Remplacement 400 par 404 plus diversess autres corrections
